# jammy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Cargo.toml  README.md
backend/src/: main.rs
frontend/: bun.lockb  next.config.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  rootlayout.tsx
frontend/app/account/: page.tsx
frontend/app/components/: Header.tsx
frontend/app/hooks/: useLogin.ts
frontend/app/lib/: jammy.ts
