[package]
name = "jammy"
version = "0.1.0"
edition = "2021"

[dependencies]
hmac = "0.12.1"
jwt = "0.16.0"
poem = "3.1.4"
poem-openapi = { version = "5.1.3", features = ["swagger-ui"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
surrealdb = { version = "2.0.4", features = ["kv-rocksdb"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"
